# use-k8s-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PROJECT_REVIEW_TODO.md  PROJECT_STATUS.md  README.md  README_GEMINI.md  TROUBLESHOOTING.md  config_examples.py  k8s_config.py  k8s_example.py  main.py  mcp_agent.py  mcp_no_tools.py  pyproject.toml  tasks.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: refactor-prd.txt
.taskmaster/tasks/: tasks.json
doc/: K8s_MCP_Agent_核心功能需求规范.md  MCP_TROUBLESHOOTING.md  gemini-2.5-flash-mcp-tech-selection.md  intelligent-cluster-cache-system.md  mcp-tool-loader-design.md  python-coding-standards.md  数据真实性铁律.md
script/: check-scan-env.py  cluster-scanning-user-guide.md  cluster-state-caching-system.md  deploy-vllm.sh  list-available-tools.py  query-cache-db.py  system-architecture-working-principles.md  verify-scan-status.py
src/: __init__.py  fail_fast_exceptions.py  k8s_scanner.py  llm_config.py  main.py  output_utils.py  tool_discovery.py
src/mcp/: capability_analyzer.py  exceptions.py  schema_parser.py  tool_loader.py  tool_selector.py
src/mcp_tools/: __init__.py  capability_analyzer.py  exceptions.py  models.py  schema_parser.py  tool_loader.py  tool_selector.py
src/scanner/: __init__.py  cluster_scan_app.py  exceptions.py  (+6 more)
test/: test_cache_system.py  test_cluster_scanner.py  test_coding_standards.py  test_llm_config.py  test_mcp_tool_loader.py  test_scan_integration.py  test_scanner_basic.py
tools/: cleanup_invalid_schemas.py  extract_all_tools.py  process_schemas.py  transform_schema_files.py
(+57 files in other folders)
